--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site configuration
 
-title: 'Chia-Yu (Hank) Chou'
-author: 'Chia-Yu Chou'
+title: 'Shih-Wei Huang'
+author: 'Shih-Wei Huang'
 
 # Starting year shown in the footer
 # i.e. Copyright [start_year]-[this_year]
 #
 # if you only want to show this year, edit this value to blank.
 # i.e. Copyright [this_year]
-start_year: 2020
+start_year: 
 
 # Pagination setup
-paginate: 4
+paginate: 7
 paginate_path: "/blog/page:num/"
 
 # Custom blog post file path
@@ -24,12 +24,12 @@ blog:
   feed: '/feed.xml'
 
 # Default website url
-url: https://xh5a5n6k6.github.io
+url: https://dhscfh.github.io
 # Page title will link to defualt_url
 default_url: '/'
 
 # google analytics Track/Measurement ID setup
-google_analytics_id: UA-204014371-1
+google_analytics_id: 
 
 
 # Menu pages shown in the top-navigation
@@ -41,7 +41,7 @@ menu:
   # If using blog page, its url MUST match [paginate_path]
   # set above
   - {name: 'Blog', url: '/blog/'}
-  - {name: 'Portfolio', url: '/portfolio/'}
+  #- {name: 'Portfolio', url: '/portfolio/'}
   - {name: 'Resume', url: '/resume.html'}
   - {name: 'About', url: '/about.html'}
 
@@ -53,7 +53,7 @@ menu:
 # more icons can be found there: https://fontawesome.com/
 social:
   - {icon: 'github-square', link: 'https://www.github.com/xh5a5n6k6/'}
-  - {icon: 'vimeo-square', link: 'https://vimeo.com/user108255640/'}
+  #- {icon: 'vimeo-square', link: 'https://vimeo.com/user108255640/'}
   - {icon: 'twitter-square', link: 'https://twitter.com/xh5a5n6k6/'}
   - {icon: 'linkedin', link: 'https://www.linkedin.com/in/chiayu-hank-chou/'}
 
